# openWhoop

./: .gitignore  AGENTS.md  DISCLAIMER.md  LICENSE  README.md  capacitor.config.json  package-lock.json  package.json  pyproject.toml  run.sh  setup.sh  vitest.config.js  wrangler.toml
docs/: EDGE_CASES.md  IPHONE.md  IPHONE_BLUEFY.md  PROTOCOL.md  SHORTCUT.md  native-ios.md  whoop5-candidate-capture.md
docs/superpowers/plans/: 2026-05-20-whoof-web-pwa.md
docs/superpowers/specs/: 2026-05-20-whoof-redesign-design.md  2026-05-20-whoof-web-pwa-design.md
functions/api/: coach.js  sync.js
tests/: test_db.py  test_health.py  test_metrics.py  test_parser.py  test_sleep.py  test_workouts.py  test_zones.py
tests/js/ble/: client.test.js  crc.test.js  packet.test.js  parsers.test.js
tests/js/data/: captures.test.js  db.test.js  export.test.js  integrity.test.js  journal.test.js  queries.test.js
tests/js/dev/: analyzer.test.js  capture.test.js
tests/js/functions/: coach.test.js
tests/js/health/: apple.test.js  scale.test.js  sync.test.js
tests/js/metrics/: backfill-rollup.test.js  correlate.test.js  healthmonitor.test.js  hrr.test.js  hrv.test.js  insights.test.js  plan.test.js  recovery.test.js  rollup.test.js  sleep.test.js  sleepdetail.test.js  steps.test.js  strain.test.js  vo2max.test.js  weekly.test.js  whoopage.test.js  workouts.test.js  (+1 more)
web/: _headers  app.js  index.html  manifest.json  styles.css  sw.js
web/js/: app-mvp.js
whoof/: __init__.py  __main__.py  cli.py  dashboard.py  db.py  metrics.py  recorder.py  sleep.py  workouts.py  zones.py
(+46 files in other folders)
