[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whoof"
version = "0.1.0"
description = "Unofficial, educational BLE client for the WHOOP 4.0 strap — local SQLite logger, HRV/recovery/strain estimates, web dashboard. Not affiliated with WHOOP, Inc."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Shams" }]
keywords = ["whoop", "ble", "bluetooth", "hrv", "heart-rate", "fitness"]
dependencies = [
  "whoop-reader>=0.1.0",
  "click>=8.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-asyncio>=0.21"]

[project.scripts]
whoof = "whoof.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["whoof"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
